welcome.lessons.welcome.array.notriples.NoTriples.scala.error
noTriples:16: error: not found: value trie2
      trie2(tab(i),tab(i+1))
      ^noTriples:18: error: not enough arguments for method verifTrie: (tab: Array[Int])Boolean.
Unspecified value parameter tab.
    estTrie=verifTrie()
                     ^noTriples:28: error: reassignment to val
    a=b-a
     ^noTriples:29: error: reassignment to val
    b=b-a
     ^noTriples:30: error: reassignment to val
    a=b+a
     ^